--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">V_World_weather02</string>
+    <string name="app_name">V_world天气APP</string>
 </resources>
